--- a/code/src/MessageInput.css
+++ b/code/src/MessageInput.css
@@ -1,16 +1,29 @@
 .message-form {
     display: flex;
     flex-direction: column;
+    background-color: rgb(233, 233, 233);
 }
 
 .submit-button {
     margin-top: 1em;
-    width: 60%;
+    padding: 0 -2em ;
+    width: 80%;
     text-align: center;
+    background-color: rgb(255, 166, 166);
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.submit-button:hover {
+    cursor: pointer;
+    background: rgb(240, 133, 133);
 }
 
 .heart {
     transform: scale(0.4);
     margin: -10px;
     text-align: center;
+}
+
+body {
+    font-family: 'Courier New', Courier, monospace;
 }
