updated css and functionality

--- a/code/src/MessageInput.css
+++ b/code/src/MessageInput.css
@@ -5,9 +5,11 @@
 }
 
 .submit-button {
-    margin-top: 1em;
-    padding: 0 -2em ;
-    width: 80%;
+    margin-top: 1.8em;
+    padding: 1em 1.2em ;
+    border-radius: 20px;
+    border: none;
+    width: 50%;
     text-align: center;
     background-color: rgb(255, 166, 166);
     font-family: 'Courier New', Courier, monospace;
